Bug Fixes from Stakeholder Meeting
Fix to the problem where on some browsers hidden buttons were still displaying. Potential fix to problems where on some mobile devices, the ET images were being cut off.

--- a/css/pediatrics.css
+++ b/css/pediatrics.css
@@ -39,6 +39,7 @@
 
   .parent-cta {
     background: url("../img/ET_ParentsBanner.png");
+    -webkit-background-size: cover;
     background-size: cover;
     background-position: right;
     margin-top: 0px; }
@@ -60,7 +61,9 @@
       margin-bottom: 14px; }
 
   .educator-cta {
+    
         background: url("../img/ET_EducatorsBanner.png");
+        -webkit-background-size: cover;
         background-size: cover;
         background-position: right;
         margin-top: 0px; }
